fix Pack Service + add wiki market icons